# Coursework_Beal_final

./: CMakeLists.txt  Question1-3.cpp  Question1-3.h  Question5.cpp  Question6.cpp  Question7.cpp  Question7.h  Question8.cpp  main.cpp
